--- a/0 - Cours Javascript/cours.html
+++ b/0 - Cours Javascript/cours.html
@@ -1,19 +1,19 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="cours.css">
-    <script defer src="cours.js"></script> 
+    <script defer src="cours2.js"></script> 
 </head>
 
 <div class="series-frame">
 
-    <h2>Vikings</h2>
+    <h2>Bloc 1</h2>
     <p id="info"></p>
 
 </div>
 
 <div class="series-frame">
 
-    <h2>Compte</h2>
+    <h2>Bloc 2</h2>
     <p id="Compte"></p>
 
 </div>
