1er versions up de la page produits

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,12 +28,92 @@
 
 <!-- Header -->
 <header>
-
+<div class="header">
+    <div class="header-bloc">
+        <div class="header-title">Orinoco</div>
+    </div>
+</div>
+<div class="header-under"></div>
 </header> 
 <!-- Fin Header -->
 
 <!-- Début MAIN-->
 <main>
+
+<div class="conteneur-product">
+
+<div class="product-bloc">
+
+    <h2 class="product-category">Peluches</h2>
+
+    <div class="product-bloc-grid">
+
+        <div class="product-card">
+            <div class="product-card-paddingratio">
+                    <img alt="camera" src="../backend/images/teddy_1.jpg"/>
+            </div>
+            <div class="product-card-text">
+                <div class="product-card-text-main">
+                    <div class="product-card-text-main-name">Norbert</div>
+                    <div class="product-card-text-main-price">29€</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="product-card">
+            <div class="product-card-paddingratio">
+                <img alt="camera" src="../backend/images/teddy_2.jpg"/>
+            </div>
+            <div class="product-card-text">
+                <div class="product-card-text-main">
+                    <div class="product-card-text-main-name">Arnold</div>
+                    <div class="product-card-text-main-price">39€</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="product-card">
+            <div class="product-card-paddingratio">
+                <img alt="camera" src="../backend/images/teddy_3.jpg"/>
+            </div>
+            <div class="product-card-text">
+                <div class="product-card-text-main">
+                    <div class="product-card-text-main-name">Lenny and Carl</div>
+                    <div class="product-card-text-main-price">59€</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="product-card">
+            <div class="product-card-paddingratio">
+                <img alt="camera" src="../backend/images/teddy_4.jpg"/>
+            </div>
+            <div class="product-card-text">
+                <div class="product-card-text-main">
+                    <div class="product-card-text-main-name">Gustav</div>
+                    <div class="product-card-text-main-price">45€</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="product-card">
+            <div class="product-card-paddingratio">
+                <img alt="camera" src="../backend/images/teddy_5.jpg"/>
+            </div>
+            <div class="product-card-text">
+                <div class="product-card-text-main">
+                    <div class="product-card-text-main-name">Garfunkel</div>
+                    <div class="product-card-text-main-price">55€</div>
+                </div>
+            </div>
+        </div>
+
+
+    </div> <!-- fin bloc grid -->
+</div> <!-- fin bloc -->
+
+
+</div>
 
 
 </main> <!-- Fin MAIN-->
