ajout page produits

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,7 +60,7 @@
             <div class="product-card-text">
                 <div class="product-card-text-main">
                     <div class="product-card-text-main-name">Norbert</div>
-                    <div class="product-card-text-main-price">29€</div>
+                    <div class="product-card-text-main-price">29,00€</div>
                 </div>
                 <div class="product-text-desc">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -68,65 +68,65 @@
             </div>
         </a>
 
-        <div class="product-card">
+        <a class="product-card" href="produit-2.html">
             <div class="product-card-paddingratio">
                 <img alt="camera" src="../backend/images/teddy_2.jpg"/>
             </div>
             <div class="product-card-text">
                 <div class="product-card-text-main">
                     <div class="product-card-text-main-name">Arnold</div>
-                    <div class="product-card-text-main-price">39€</div>
+                    <div class="product-card-text-main-price">39,00€</div>
                 </div>
                 <div class="product-text-desc">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </div>
             </div>
-        </div>
+        </a>
 
-        <div class="product-card">
+        <a class="product-card" href="produit-3.html">
             <div class="product-card-paddingratio">
                 <img alt="camera" src="../backend/images/teddy_3.jpg"/>
             </div>
             <div class="product-card-text">
                 <div class="product-card-text-main">
                     <div class="product-card-text-main-name">Lenny and Carl</div>
-                    <div class="product-card-text-main-price">59€</div>
+                    <div class="product-card-text-main-price">59,00€</div>
                 </div>
                 <div class="product-text-desc">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </div>
             </div>
-        </div>
+        </a>
 
-        <div class="product-card">
+        <a class="product-card" href="produit-4.html">
             <div class="product-card-paddingratio">
                 <img alt="camera" src="../backend/images/teddy_4.jpg"/>
             </div>
             <div class="product-card-text">
                 <div class="product-card-text-main">
                     <div class="product-card-text-main-name">Gustav</div>
-                    <div class="product-card-text-main-price">45€</div>
+                    <div class="product-card-text-main-price">45,00€</div>
                 </div>
                 <div class="product-text-desc">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </div>
             </div>
-        </div>
+        </a>
 
-        <div class="product-card">
+        <a class="product-card" href="produit-5.html">
             <div class="product-card-paddingratio">
                 <img alt="camera" src="../backend/images/teddy_5.jpg"/>
             </div>
             <div class="product-card-text">
                 <div class="product-card-text-main">
                     <div class="product-card-text-main-name">Garfunkel</div>
-                    <div class="product-card-text-main-price">55€</div>
+                    <div class="product-card-text-main-price">55,00€</div>
                 </div>
                 <div class="product-text-desc">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </div>
             </div>
-        </div>
+        </a>
 
 
     </div> <!-- fin bloc grid -->
