--- a/frontend/produit-2.html
+++ b/frontend/produit-2.html
@@ -55,7 +55,7 @@
     <div class="product-page-bloc-left">
 
             <div class="page-card-paddingratio">
-                    <img alt="camera" src="../backend/images/teddy_1.jpg"/>
+                    <img alt="camera" src="../backend/images/teddy_2.jpg"/>
             </div>
 
 
@@ -64,8 +64,8 @@
     <div class="product-page-bloc-right">
 
         <div class="product-page-bloc-right-head">
-            <h2 class="product-page-bloc-right-title">Norbert</h2>
-            <div class="product-page-bloc-right-price">29,00€</div>
+            <h2 class="product-page-bloc-right-title">Arnold</h2>
+            <div class="product-page-bloc-right-price">39,00€</div>
         </div>
 
         <div class="product-page-bloc-right-desc">
@@ -76,9 +76,8 @@
 
         <div class="product-page-bloc-right-colors">
             <div class="product-page-bloc-right-color-circle tan"></div>
-            <div class="product-page-bloc-right-color-circle chocolate"></div>
-            <div class="product-page-bloc-right-color-circle black"></div>
-            <div class="product-page-bloc-right-color-circle white"></div>
+            <div class="product-page-bloc-right-color-circle palebrown"></div>
+            <div class="product-page-bloc-right-color-circle darkbrown"></div>
         </div>
 
         <div class="product-page-bloc-right-add">Ajouter au panier</div>
