--- a/frontend/produit-4.html
+++ b/frontend/produit-4.html
@@ -55,7 +55,7 @@
     <div class="product-page-bloc-left">
 
             <div class="page-card-paddingratio">
-                    <img alt="camera" src="../backend/images/teddy_1.jpg"/>
+                    <img alt="camera" src="../backend/images/teddy_4.jpg"/>
             </div>
 
 
@@ -64,8 +64,8 @@
     <div class="product-page-bloc-right">
 
         <div class="product-page-bloc-right-head">
-            <h2 class="product-page-bloc-right-title">Norbert</h2>
-            <div class="product-page-bloc-right-price">29,00€</div>
+            <h2 class="product-page-bloc-right-title">Gustav</h2>
+            <div class="product-page-bloc-right-price">45,00€</div>
         </div>
 
         <div class="product-page-bloc-right-desc">
@@ -75,10 +75,9 @@
         <div class="product-page-bloc-right-color">Couleur</div>
 
         <div class="product-page-bloc-right-colors">
-            <div class="product-page-bloc-right-color-circle tan"></div>
-            <div class="product-page-bloc-right-color-circle chocolate"></div>
-            <div class="product-page-bloc-right-color-circle black"></div>
-            <div class="product-page-bloc-right-color-circle white"></div>
+            <div class="product-page-bloc-right-color-circle brown"></div>
+            <div class="product-page-bloc-right-color-circle blue"></div>
+            <div class="product-page-bloc-right-color-circle pink"></div>
         </div>
 
         <div class="product-page-bloc-right-add">Ajouter au panier</div>
