ajout fleches de retour pour la navigation

--- a/frontend/produit-3.html
+++ b/frontend/produit-3.html
@@ -56,6 +56,11 @@
 
             <div class="page-card-paddingratio">
                     <img alt="camera" src="../backend/images/teddy_3.jpg"/>
+                    <div class="back-icon">
+                        <a href="index.html">
+                            <i class="fas fa-arrow-left"></i>
+                        </a>
+                    </div>
             </div>
 
 
