--- a/frontend/produit-1.html
+++ b/frontend/produit-1.html
@@ -55,7 +55,12 @@
     <div class="product-page-bloc-left">
 
             <div class="page-card-paddingratio">
-                    <img alt="camera" src="../backend/images/teddy_1.jpg"/>
+                <img alt="camera" src="../backend/images/teddy_1.jpg"/>
+                <div class="back-icon">
+                    <a href="index.html">
+                        <i class="fas fa-arrow-left"></i>
+                    </a>
+                </div>
             </div>
 
 
