--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,11 +33,28 @@
 <!-- Header -->
 <header>
 <div class="header">
-    <div class="header-bloc">
-        <div class="header-icon"><i class="fas fa-shopping-cart"></i></div>
-        <div class="header-title">Orinoco</div>
+
+    <div class="header-bloc-spacebetween">
+
+        <div class="header-bloc">
+            <div class="header-icon"><i class="fas fa-shopping-cart"></i></div>
+            <div class="header-title">Orinoco</div>
+        </div>
+
+        <div class="header-right">
+
+            <div><i class="fas fa-search icon-search display-search"></i></div>
+            <input type="search" placeholder="Rechercher" class="espacesaisie display-search"/> 
+
+            <div class="header-shop">
+                <i class="fas fa-shopping-bag"></i>
+            </div>
+        </div>
+
     </div>
+
 </div>
+
 <div class="header-under"></div>
 </header> 
 <!-- Fin Header -->
