--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,7 +45,7 @@
             <div><i class="fas fa-search icon-search display-search"></i></div>
             <input type="search" placeholder="Rechercher" class="espacesaisie display-search"/> 
             <div class="header-shop">
-                <i class="fas fa-shopping-bag"></i>
+                <a href="#rechercheproduits"><i class="fas fa-shopping-bag"></i></a>
             </div>
         </div>
 
@@ -62,9 +62,9 @@
 
 <div class="conteneur-product">
 
-<div class="product-bloc-grey">
+<div id="rechercheproduits" class="product-bloc-grey">
 
-    <h2 id="rechercheproduits" class="product-category">Peluches</h2>
+    <h2 class="product-category">Peluches</h2>
 
     <div class="product-bloc-grid">
 
