debut page panier

--- a/frontend/produit-1.html
+++ b/frontend/produit-1.html
@@ -45,7 +45,7 @@
                 <div><i class="fas fa-search icon-search display-search"></i></div>
                 <input type="search" placeholder="Rechercher" class="espacesaisie display-search"/> 
                 <div class="header-shop">
-                    <a href="#rechercheproduits"><i class="fas fa-shopping-bag"></i></a>
+                    <a href="panier.html"><i class="fas fa-shopping-bag"></i></a>
                 </div>
             </div>
     
