fin de la page pannier

--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -78,8 +78,73 @@
             <h2 class="panier-bloc-right-title">Panier</h2>
         </div>
 
+        <div class="panier-bloc-list">
 
-    </div>
+            <div class="panier-bloc-list-product">
+
+                <div class="panier-card-paddingratio">
+                    <img alt="ours en peluche" src="../backend/images/teddy_1.jpg"/>
+                </div>
+
+                <div class="panier-bloc-list-product-text">
+
+                    <div class="panier-bloc-left-head-flex">
+                        <div class="panier-bloc-left-head-text">Norbert</div>
+                        <div class="panier-bloc-left-head-text">39,00€</div>
+                    </div>
+
+                    <div class="panier-bloc-left-desc">Couleur : chocolate </div>
+                    <div class="panier-bloc-left-desc">Quantité : 1</div>
+                </div>
+
+            </div>
+
+            <div class="panier-bloc-left-separator3"></div>
+
+
+            <div class="panier-bloc-list-product">
+
+                <div class="panier-card-paddingratio">
+                    <img alt="ours en peluche" src="../backend/images/teddy_3.jpg"/>
+                </div>
+
+                <div class="panier-bloc-list-product-text">
+                    <div class="panier-bloc-left-head-flex">
+                        <div class="panier-bloc-left-head-text">Lenny and Carl</div>
+                        <div class="panier-bloc-left-head-text">59,00€</div>
+                    </div>                    
+                    <div class="panier-bloc-left-desc">Couleur : brown </div>
+                    <div class="panier-bloc-left-desc">Quantité : 1</div>
+                </div>
+
+            </div>       
+
+            <div class="panier-bloc-left-separator3"></div>
+
+            
+            <div class="panier-bloc-list-product">
+
+                <div class="panier-card-paddingratio">
+                    <img alt="ours en peluche" src="../backend/images/teddy_5.jpg"/>
+                </div>
+
+                <div class="panier-bloc-list-product-text">
+                    <div class="panier-bloc-left-head-flex">
+                        <div class="panier-bloc-left-head-text">Garfunkel</div>
+                        <div class="panier-bloc-left-head-text">55,00€</div>
+                    </div>                    
+                    <div class="panier-bloc-left-desc">Couleur : beige </div>
+                    <div class="panier-bloc-left-desc">Quantité : 1</div>
+                </div>
+
+            </div>      
+
+            
+
+        </div> <!-- Fin liste produits dans le pannier -->
+
+    </div> <!-- Fin bloc left -->
+
 
     <div class="panier-bloc-right">
 
@@ -89,7 +154,7 @@
 
         <div class="panier-bloc-right-desc-flex">
             <div class="panier-bloc-right-desc">Sous-Total : </div>
-            <div class="panier-bloc-right-desc">39,00€</div>
+            <div class="panier-bloc-right-desc">153,00€</div>
         </div>
         <div class="panier-bloc-right-desc-flex">
             <div class="panier-bloc-right-desc">Frais de livraisons : </div>
@@ -99,8 +164,8 @@
         <div class="panier-bloc-right-separator2"></div>
 
         <div class="panier-bloc-right-flex">
-            <div class="panier-bloc-right-color">Total</div>
-            <div class="panier-bloc-right-price">43,99€</div>
+            <div class="panier-bloc-right-color">Total :</div>
+            <div class="panier-bloc-right-price">157,99€</div>
         </div>
 
         <button class="panier-bloc-right-add">Paiement</button>
