v1 de la page de confirmation de commande

--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -168,7 +168,7 @@
             <div class="panier-bloc-right-price">157,99€</div>
         </div>
 
-        <button class="panier-bloc-right-add">Paiement</button>
+        <a href="thanks.html" class="panier-bloc-right-add">Paiement</a>
 
 
 
