fin page de confirmation de commande

--- a/frontend/thanks.html
+++ b/frontend/thanks.html
@@ -80,10 +80,13 @@
     <div>Numéro de commande</div>
 </div>
 
-<div>
+<div class="thanks-desc">
 <div>Vôtre commande a été effectué à 16h11. </div>
 <div> Des questions ? Nous contacter</div>
 </div>
+
+<a href="index.html" class="panier-bloc-right-add">Continuer mes achats</a>
+
 
 
 </div> <!-- fin thanks bloc -->
