--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,12 +7,11 @@
     <!-- Charset Utf-8 définit l'encodage et d'affichage des caractère spéciaux de la page -->
     <meta charset="utf-8" />
     <!-- Switch de version : Desktop / Mobile -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device=width, initial-scale=1.0">
-        <!-- Font Finger Paint / Titre -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap" rel="stylesheet">   
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />        
+    <!-- Font Finger Paint / Titre -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap" rel="stylesheet">   
     <!-- Font Roboto -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">    
@@ -22,6 +21,10 @@
     <link rel="stylesheet" href="style/css/reset.css" />    
     <!-- Liens style CSS personnel -->
     <link rel="stylesheet" href="style/css/style.css" />  
+
+    <!-- Liens Javascript / le async evite d'avoir a mettre le js à la fin du document -->
+    <script src="index.js" async></script>
+
     <!-- Nom de l'onglet du site -->
     <title>Orinoco</title>  
 </head>
@@ -74,7 +77,7 @@
             </div>
             <div class="product-card-text">
                 <div class="product-card-text-main">
-                    <div class="product-card-text-main-name">Norbert</div>
+                    <div id="product1-name" class="product-card-text-main-name">Norbert</div>
                     <div class="product-card-text-main-price">29,00€</div>
                 </div>
                 <div class="product-text-desc">
@@ -179,6 +182,7 @@
     </footer>
 
 <!-- Fin Footer -->
+
 
 
 
