ajout script de création de div et ajout de note dans le code pour comprendre et rendre lisible le script

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="style/css/style.css" />  
 
     <!-- Liens Javascript / le async evite d'avoir a mettre le js à la fin du document -->
-    <script src="index.js" async></script>
+    <script src="javascript/index.js" async></script>
 
     <!-- Nom de l'onglet du site -->
     <title>Orinoco</title>  
