la page se fait uniquement via le js et le serveur désormais

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,8 +69,9 @@
 
     <h2 class="product-category">Peluches</h2>
 
-    <div class="product-bloc-grid">
+    <div id="product-bloc" class="product-bloc-grid">
 
+        <!-- notation de l'architecture type de la carde
         <a class="product-card" href="produit-1.html">
             <div class="product-card-paddingratio">
                     <img alt="camera" src="../backend/images/teddy_1.jpg"/>
@@ -85,67 +86,7 @@
                 </div>
             </div>
         </a>
-
-        <a class="product-card" href="produit-2.html">
-            <div class="product-card-paddingratio">
-                <img alt="camera" src="../backend/images/teddy_2.jpg"/>
-            </div>
-            <div class="product-card-text">
-                <div class="product-card-text-main">
-                    <div class="product-card-text-main-name">Arnold</div>
-                    <div class="product-card-text-main-price">39,00€</div>
-                </div>
-                <div class="product-text-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </div>
-            </div>
-        </a>
-
-        <a class="product-card" href="produit-3.html">
-            <div class="product-card-paddingratio">
-                <img alt="camera" src="../backend/images/teddy_3.jpg"/>
-            </div>
-            <div class="product-card-text">
-                <div class="product-card-text-main">
-                    <div class="product-card-text-main-name">Lenny and Carl</div>
-                    <div class="product-card-text-main-price">59,00€</div>
-                </div>
-                <div class="product-text-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </div>
-            </div>
-        </a>
-
-        <a class="product-card" href="produit-4.html">
-            <div class="product-card-paddingratio">
-                <img alt="camera" src="../backend/images/teddy_4.jpg"/>
-            </div>
-            <div class="product-card-text">
-                <div class="product-card-text-main">
-                    <div class="product-card-text-main-name">Gustav</div>
-                    <div class="product-card-text-main-price">45,00€</div>
-                </div>
-                <div class="product-text-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </div>
-            </div>
-        </a>
-
-        <a class="product-card" href="produit-5.html">
-            <div class="product-card-paddingratio">
-                <img alt="camera" src="../backend/images/teddy_5.jpg"/>
-            </div>
-            <div class="product-card-text">
-                <div class="product-card-text-main">
-                    <div class="product-card-text-main-name">Garfunkel</div>
-                    <div class="product-card-text-main-price">55,00€</div>
-                </div>
-                <div class="product-text-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </div>
-            </div>
-        </a>
-
+-->
 
     </div> <!-- fin bloc grid -->
 </div> <!-- fin bloc grey -->
