la page produit fonctionne

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,8 @@
     <link rel="stylesheet" href="style/css/style.css" />  
 
     <!-- Liens Javascript / le async evite d'avoir a mettre le js à la fin du document -->
-    <script src="javascript/index.js" async></script>
+    <script src="javascript/index-teddy.js" async></script>
+    <script src="javascript/product-teddy.js" async></script>
 
     <!-- Nom de l'onglet du site -->
     <title>Orinoco</title>  
@@ -67,7 +68,7 @@
 
 <div id="rechercheproduits" class="product-bloc-grey">
 
-    <h2 class="product-category">Peluches</h2>
+    <h2 class="product-category">Produits</h2>
 
     <div id="product-bloc" class="product-bloc-grid">
 
