--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -8,7 +8,6 @@
     <meta charset="utf-8" />
     <!-- Switch de version : Desktop / Mobile -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device=width, initial-scale=1.0">
     <!-- Font Roboto -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
@@ -75,7 +74,7 @@
     <div class="product-page-bloc-left">
 
             <div class="page-card-paddingratio">
-                <img alt="camera" src="../backend/images/teddy_1.jpg"/>
+                <img alt="" src=""/>
                 <div class="back-icon">
                     <a href="index.html">
                         <i class="fas fa-arrow-left"></i>
@@ -89,13 +88,12 @@
     <div class="product-page-bloc-right">
 
         <div class="product-page-bloc-right-head">
-            <h2 class="product-page-bloc-right-title">Norbert</h2>
-            <div class="product-page-bloc-right-price">29,00€</div>
+            <h2 class="product-page-bloc-right-title"></h2>
+            <div class="product-page-bloc-right-price"></div>
         </div>
 
-        <div class="product-page-bloc-right-desc">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </div>
+        <div class="product-page-bloc-right-desc"></div>
+
         <div class="product-page-bloc-right-separator"></div>
         <div class="product-page-bloc-right-color">Couleur</div>
 
