ajout script permettant de créer des blocs des couleurs de l'object automatiquement mais le texte et le nombre de couleur n'est pas bon pour l'instant

--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -73,13 +73,11 @@
 
     <div class="product-page-bloc-left">
 
-            <div class="page-card-paddingratio">
+            <div class="page-card-paddingratio PicLoading">
                 <img alt="" src=""/>
-                <div class="back-icon">
-                    <a href="index.html">
+                <a class="back-icon" href="index.html">
                         <i class="fas fa-arrow-left"></i>
-                    </a>
-                </div>
+                </a>
             </div>
 
 
@@ -97,11 +95,16 @@
         <div class="product-page-bloc-right-separator"></div>
         <div class="product-page-bloc-right-color">Couleur</div>
 
-        <div class="product-page-bloc-right-colors">
-            <button class="product-page-bloc-right-color-circle tan"></button>
-            <button class="product-page-bloc-right-color-circle chocolate"></button>
-            <button class="product-page-bloc-right-color-circle black"></button>
-            <button class="product-page-bloc-right-color-circle white"></button>
+        <div id="ColorBloc" class="product-page-bloc-right-colors">
+
+
+            
+            <!--
+            <button class="product-page-bloc-right-color-div tan"></button>
+            <button class="product-page-bloc-right-color-div chocolate"></button>
+            <button class="product-page-bloc-right-color-div black"></button>
+            <button class="product-page-bloc-right-color-div white"></button>
+            -->
         </div>
 
         <button class="product-page-bloc-right-add">Ajouter au panier</button>
