hourra la création de bloc couleur fonctionne

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,9 +22,8 @@
     <!-- Liens style CSS personnel -->
     <link rel="stylesheet" href="style/css/style.css" />  
 
-    <!-- Liens Javascript / le async evite d'avoir a mettre le js à la fin du document -->
+    <!-- Script qui créé automatiquement les cards en fonction des object backend -->
     <script src="javascript/index-teddy.js" async></script>
-    <script src="javascript/product-teddy.js" async></script>
 
     <!-- Nom de l'onglet du site -->
     <title>Orinoco</title>  
