--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -22,8 +22,7 @@
     <!-- Liens style CSS personnel -->
     <link rel="stylesheet" href="style/css/style.css" />  
 
-  <!-- Liens Javascript / le async evite d'avoir a mettre le js à la fin du document -->
-  <script src="javascript/index-teddy.js" async></script>
+  <!-- Script qui personnalise la page en fonction du produits cliqué -->
   <script src="javascript/product-teddy.js" async></script>
 
     <!-- Nom de l'onglet du site -->
@@ -98,7 +97,7 @@
         <div id="ColorBloc" class="product-page-bloc-right-colors">
 
 
-            
+
             <!--
             <button class="product-page-bloc-right-color-div tan"></button>
             <button class="product-page-bloc-right-color-div chocolate"></button>
