modif page panier préparation pour le début du local storage et du javascript de la page pannier

--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -8,7 +8,6 @@
     <meta charset="utf-8" />
     <!-- Switch de version : Desktop / Mobile -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device=width, initial-scale=1.0">
     <!-- Font Roboto -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
@@ -95,6 +94,9 @@
 
                     <div class="panier-bloc-left-desc">Couleur : chocolate </div>
                     <div class="panier-bloc-left-desc">Quantité : 1</div>
+
+                    <button class="DeleteButton"> <div class="DeleteText">Supprimer</div> <i class="fas fa-times"></i></button>
+
                 </div>
 
             </div>
@@ -115,6 +117,9 @@
                     </div>                    
                     <div class="panier-bloc-left-desc">Couleur : brown </div>
                     <div class="panier-bloc-left-desc">Quantité : 1</div>
+
+                    <button class="DeleteButton"> <div class="DeleteText">Supprimer</div> <i class="fas fa-times"></i></button>
+
                 </div>
 
             </div>       
@@ -135,6 +140,9 @@
                     </div>                    
                     <div class="panier-bloc-left-desc">Couleur : beige </div>
                     <div class="panier-bloc-left-desc">Quantité : 1</div>
+
+                    <button class="DeleteButton"> <div class="DeleteText">Supprimer</div> <i class="fas fa-times"></i></button>
+
                 </div>
 
             </div>      
