premier test vidéo

--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -21,6 +21,11 @@
     <link rel="stylesheet" href="style/css/reset.css" />    
     <!-- Liens style CSS personnel -->
     <link rel="stylesheet" href="style/css/style.css" />  
+
+  <!-- Script du local storage -->
+  <script src="javascript/local-storage-1.js" async></script>
+
+
     <!-- Nom de l'onglet du site -->
     <title>Panier</title>  
 </head>
@@ -80,36 +85,26 @@
         <div class="panier-bloc-list">
 
             <div class="panier-bloc-list-product">
-
                 <div class="panier-card-paddingratio">
                     <img alt="ours en peluche" src="../backend/images/teddy_1.jpg"/>
                 </div>
-
                 <div class="panier-bloc-list-product-text">
-
                     <div class="panier-bloc-left-head-flex">
                         <div class="panier-bloc-left-head-text">Norbert</div>
                         <div class="panier-bloc-left-head-text">39,00€</div>
                     </div>
-
                     <div class="panier-bloc-left-desc">Couleur : chocolate </div>
                     <div class="panier-bloc-left-desc">Quantité : 1</div>
-
                     <button class="DeleteButton"> <div class="DeleteText">Supprimer</div> <i class="fas fa-times"></i></button>
-
                 </div>
-
             </div>
 
             <div class="panier-bloc-left-separator3"></div>
 
-
             <div class="panier-bloc-list-product">
-
                 <div class="panier-card-paddingratio">
-                    <img alt="ours en peluche" src="../backend/images/teddy_3.jpg"/>
+                    <img src="../backend/images/teddy_3.jpg" alt="ours en peluche" />
                 </div>
-
                 <div class="panier-bloc-list-product-text">
                     <div class="panier-bloc-left-head-flex">
                         <div class="panier-bloc-left-head-text">Lenny and Carl</div>
@@ -117,22 +112,16 @@
                     </div>                    
                     <div class="panier-bloc-left-desc">Couleur : brown </div>
                     <div class="panier-bloc-left-desc">Quantité : 1</div>
-
                     <button class="DeleteButton"> <div class="DeleteText">Supprimer</div> <i class="fas fa-times"></i></button>
-
                 </div>
-
             </div>       
 
             <div class="panier-bloc-left-separator3"></div>
-
             
             <div class="panier-bloc-list-product">
-
                 <div class="panier-card-paddingratio">
                     <img alt="ours en peluche" src="../backend/images/teddy_5.jpg"/>
                 </div>
-
                 <div class="panier-bloc-list-product-text">
                     <div class="panier-bloc-left-head-flex">
                         <div class="panier-bloc-left-head-text">Garfunkel</div>
@@ -140,14 +129,12 @@
                     </div>                    
                     <div class="panier-bloc-left-desc">Couleur : beige </div>
                     <div class="panier-bloc-left-desc">Quantité : 1</div>
-
                     <button class="DeleteButton"> <div class="DeleteText">Supprimer</div> <i class="fas fa-times"></i></button>
-
                 </div>
-
             </div>      
 
-            
+            <div class="panier-bloc-left-separator3"></div>
+
 
         </div> <!-- Fin liste produits dans le pannier -->
 
