--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -171,8 +171,27 @@
 
 </div> <!-- fin product page bloc -->
 
+<div class="localstorage-bloc">
+    <div> Test du Local Storage </div>
 
-</div> <!-- fin bloc grey -->
+    <div class="displayflex">
+    <input type="search" placeholder="Add" class="wii"/> 
+    <button class="buttonenvoyer">Envoyer</button>
+    </div>
+
+    <button onclick="AddProduct()" class="buttontest"> Add 1 </button>
+    <button onclick="AddProduct()" class="buttontest"> Add 2 </button>
+    <button onclick="AddProduct()" class="buttontest"> Add 3 </button>
+    <button onclick="AddProduct()" class="buttontest"> Add 4 </button>
+    <button onclick="AddProduct()" class="buttontest"> Add 5 </button>
+
+
+
+
+</div>
+
+
+</div> <!-- fin bloc conteneur (grey) -->
 </div> <!-- fin conteneur -->
 
 
