ajout set item stringify d'objet json dans le local storage

--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="style/css/style.css" />  
 
   <!-- Script du local storage -->
-  <script src="javascript/local-storage-1.js" async></script>
+  <script src="javascript/get-item.js" async></script>
 
 
     <!-- Nom de l'onglet du site -->
@@ -84,6 +84,8 @@
 
         <div class="panier-bloc-list">
 
+            <!-- exemple de div produits panier
+
             <div class="panier-bloc-list-product">
                 <div class="panier-card-paddingratio">
                     <img alt="ours en peluche" src="../backend/images/teddy_1.jpg"/>
@@ -101,40 +103,8 @@
 
             <div class="panier-bloc-left-separator3"></div>
 
-            <div class="panier-bloc-list-product">
-                <div class="panier-card-paddingratio">
-                    <img src="../backend/images/teddy_3.jpg" alt="ours en peluche" />
-                </div>
-                <div class="panier-bloc-list-product-text">
-                    <div class="panier-bloc-left-head-flex">
-                        <div class="panier-bloc-left-head-text">Lenny and Carl</div>
-                        <div class="panier-bloc-left-head-text">59,00€</div>
-                    </div>                    
-                    <div class="panier-bloc-left-desc">Couleur : brown </div>
-                    <div class="panier-bloc-left-desc">Quantité : 1</div>
-                    <button class="DeleteButton"> <div class="DeleteText">Supprimer</div> <i class="fas fa-times"></i></button>
-                </div>
-            </div>       
-
-            <div class="panier-bloc-left-separator3"></div>
-            
-            <div class="panier-bloc-list-product">
-                <div class="panier-card-paddingratio">
-                    <img alt="ours en peluche" src="../backend/images/teddy_5.jpg"/>
-                </div>
-                <div class="panier-bloc-list-product-text">
-                    <div class="panier-bloc-left-head-flex">
-                        <div class="panier-bloc-left-head-text">Garfunkel</div>
-                        <div class="panier-bloc-left-head-text">55,00€</div>
-                    </div>                    
-                    <div class="panier-bloc-left-desc">Couleur : beige </div>
-                    <div class="panier-bloc-left-desc">Quantité : 1</div>
-                    <button class="DeleteButton"> <div class="DeleteText">Supprimer</div> <i class="fas fa-times"></i></button>
-                </div>
-            </div>      
-
-            <div class="panier-bloc-left-separator3"></div>
-
+Fin exemple produit panier
+-->
 
         </div> <!-- Fin liste produits dans le pannier -->
 
@@ -171,24 +141,6 @@
 
 </div> <!-- fin product page bloc -->
 
-<div class="localstorage-bloc">
-    <div> Test du Local Storage </div>
-
-    <div class="displayflex">
-    <input type="search" placeholder="Add" class="wii"/> 
-    <button class="buttonenvoyer">Envoyer</button>
-    </div>
-
-    <button onclick="AddProduct()" class="buttontest"> Add 1 </button>
-    <button onclick="AddProduct()" class="buttontest"> Add 2 </button>
-    <button onclick="AddProduct()" class="buttontest"> Add 3 </button>
-    <button onclick="AddProduct()" class="buttontest"> Add 4 </button>
-    <button onclick="AddProduct()" class="buttontest"> Add 5 </button>
-
-
-
-
-</div>
 
 
 </div> <!-- fin bloc conteneur (grey) -->
