--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -25,8 +25,8 @@
   <!-- Script qui personnalise la page en fonction du produits cliqué -->
   <script src="javascript/product-teddy.js" async></script>
 
-  <!-- Script du local storage -->
-  <script src="javascript/local-storage-2.js" async></script>
+  <!-- Script bouton add in local storage -->
+  <script src="javascript/set-item.js" async></script>
 
     <!-- Nom de l'onglet du site -->
     <title>Norbert</title>  
@@ -109,7 +109,7 @@
             -->
         </div>
 
-        <button onclick="addName" class="product-page-bloc-right-add">Ajouter au panier</button>
+        <button id="ButtonAdd" class="product-page-bloc-right-add">Ajouter au panier</button>
 
 
 
